--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>TinDog</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
+  <title>TinDog</title>
 </head>
 
 <body>
@@ -33,30 +34,30 @@
 
   <!-- Title -->
   <section id="title" class="container py-4 px-2">
-    <div class="row d-flex center justify-content-center">
+    <div class="row w-100 m-auto d-flex center justify-content-center">
       <div class="col-12 col-lg-6 d-flex flex-column justify-content-center text_title gap-3">
         <h1>Meet new and interesting dogs nearby.</h1>
         <button style="max-width: 250px;" type="button" class="btn btn-primary py-2">Download</button>
       </div>
-      <div class="col-12 col-lg-auto d-flex justify-content-center">
-        <img style="max-height: 450px;" src="images/iphone6.png" alt="iphone-mockup">
+      <div class="col-12 col-md-auto d-flex justify-content-center">
+        <img class="w-100" style="max-height: 450px;" src="images/iphone6.png" alt="iphone-mockup">
       </div>
     </div>
   </section>
 
   <!-- Features -->
   <section id="features" class="container py-4 px-2">
-    <div class="row d-flex row-gap-3 column-gap-5 justify-content-center">
-      <h2 class="fs-1 text-center mb-2">Features</h2>
-      <div class="col-12 col-lg-auto py-2 px-4 rounded bg-primary text-white">
+    <h2 class="fs-1 text-center mb-4">Features</h2>
+    <div class="row w-100 m-auto d-flex row-gap-3 column-gap-5 justify-content-center">
+      <div class="col-12 col-md-6 col-lg-auto py-2 px-4 rounded bg-primary text-white">
         <h3 class="mb-3">Easy to use.</h3>
         <p>So easy to use, even your dog could do it.</p>
       </div>
-      <div class="col-12 col-lg-auto py-2 px-4 rounded bg-primary text-white">
+      <div class="col-12 col-md-6 col-lg-auto py-2 px-4 rounded bg-primary text-white">
         <h3 class="mb-3">Elite Clientele</h3>
         <p>We have all the dogs, the greatest dogs.</p>
       </div>
-      <div class="col-12 col-lg-auto py-2 px-4 rounded bg-primary text-white">
+      <div class="col-12 col-md-6 col-lg-auto py-2 px-4 rounded bg-primary text-white">
         <h3 class="mb-3">Guaranteed to work.</h3>
         <p>Find the love of your dog's life or your money back.</p>
       </div>
@@ -66,13 +67,13 @@
   <!-- Testimonials -->
   <section id="testimonials" class="container py-4 px-2">
     <h2 class="fs-1 text-center mb-4">Testimonials</h2>
-    <div class="row d-flex row-gap-3 column-gap-5 justify-content-center">
-      <div class="col-12 col-lg-auto py-3 px-4 rounded bg-warning">
+    <div class="row w-100 m-auto d-flex row-gap-3 column-gap-5 justify-content-center">
+      <div class="col-auto py-3 px-4 rounded bg-warning">
         <h2 class="fs-5 testimonial_heading">&#8220I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.&#8220</h2>
         <img class="avatar" src="images/dog-img.jpg" alt="dog-profile">
         <em>Pebbles, New York</em>
       </div>
-      <div class="col-12 col-lg-auto py-3 px-4 rounded bg-warning">
+      <div class="col-auto py-3 px-4 rounded bg-warning">
         <h2 class="fs-5 testimonial_heading">&#8220My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.&#8220</h2>
         <img class="avatar" class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
         <em>Beverly, Illinois</em>
@@ -81,7 +82,7 @@
   </section>
 
   <!-- Press -->
-  <section id="press" class="container py-5">
+  <section id="press" class="container py-5 px-2">
     <div class="d-flex flex-wrap justify-content-center align-items-center gap-5 ">
       <div class="text-center"><img class="w-100" src="images/techcrunch.png" alt="tc-logo"></div>
       <div class="text-center"><img class="w-100" src="images/tnw.png" alt="tnw-logo"></div>
@@ -97,7 +98,7 @@
       <h2>A Plan for Every Dog's Needs</h2>
       <p>Simple and affordable price plans for your and your dog.</p>
     </div>
-    <div class="row col-12 gap-5 justify-content-center">
+    <div class="row w-100 m-auto card_row col-12 gap-5 justify-content-center">
       <div class="p-4 pricing_card text-center bg-warning">
         <div>
           <h3 class="mb-1">Chihuahua</h3>
