--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <!-- Press -->
   <section id="press" class="container py-5 px-2">
     <div class="d-flex flex-wrap justify-content-center align-items-center gap-5 ">
-      <div class="text-center"><img class="w-100" src="images/techcrunch.png" alt="tc-logo"></div>
+      <div class="text-center"><img class="w-100" src="images/TechCrunch.png" alt="tc-logo"></div>
       <div class="text-center"><img class="w-100" src="images/tnw.png" alt="tnw-logo"></div>
       <div class="text-center"><img class="w-100" src="images/bizinsider.png" alt="biz-insider-logo"></div>
       <div class="text-center"><img class="w-100" src="images/mashable.png" alt="mashable-logo"></div>
